--- a/1_server/application/templates/home.html
+++ b/1_server/application/templates/home.html
@@ -6,7 +6,7 @@
   display: inline-block;
   margin: auto;
   width: 60%;
-  border: 3px solid #72AD91;
+  border: 3px solid  #1837c6;
   padding: 10px;
 }
 </style>
